discussion/kv_engine/177125/177125_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Make DcpFlowControlManager::engine const

Change-Id: I08a3ccdf0b7b5f6d0190ef40029c98ea47642013

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-04 09:57:32.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-04 10:00:49.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48074/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48074/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40395/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8909/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8909/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21139/ : ABORTED

Compile error at [2022-08-04T10:00:19.826Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:21:50:
error: passing ?const EventuallyPersistentEngine? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21139/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20380/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29526/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9006/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9006/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21498/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21498/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22220/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22220/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19221/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:21:26: error: "this" argument to member function "getConfiguration" has type "const EventuallyPersistentEngine", but function is not marked const [clang-diagnostic-error]
    dcpConnBufferRatio = engine.getConfiguration().getDcpConnBufferRatio();
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:667:20: note: "getConfiguration" declared here
    Configuration& getConfiguration() {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:36:26: error: "this" argument to member function "getConfiguration" has type "const EventuallyPersistentEngine", but function is not marked const [clang-diagnostic-error]
    const auto& config = engine.getConfiguration();
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:667:20: note: "getConfiguration" declared here
    Configuration& getConfiguration() {
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19221/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:21:26:
error: "this" argument to member function "getConfiguration" has type "const EventuallyPersistentEngine", but function is not marked const [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19221/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18406/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
